--- a/sass/pages/_investors.scss
+++ b/sass/pages/_investors.scss
@@ -736,57 +736,57 @@
 		
 		.custom-height-press-rel {
 			@media only screen and (min-width: 300px) and (max-width: 1024px) {
-				margin-top: -200px !important;
+				margin-top: 0px !important;
 			}
 		}
 
 		.press-releases {
 			@media only screen and (max-width: 767px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 661px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 600px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 575px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 526px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 485px) {
 				padding: 10px !important;
-				padding-top: 60px !important;
+				// padding-top: 60px !important;
 				padding-bottom: 60px !important;
-				margin-top: -110px;
+				// margin-top: -110px;
 			}
 		
 			  @media only screen and (max-width: 411px) {
 				padding: 10px !important;
-				padding-top: 187px !important;
-				margin-top: -110px;
+				// padding-top: 187px !important;
+				// margin-top: -110px;
 			}
 			h2 {
 				font-family: $font-secondary;
